[workspace]
resolver = "3"
members = [
  "hitt-cli",
  "hitt-formatter",
  "hitt-parser",
  "hitt-request",
  "hitt-sse",
]
exclude = ["docs", "examples"]

[workspace.package]
version = "0.0.21"
authors = ["Mads Hougesen <mads@mhouge.dk>"]
edition = "2024"
description = "Command line HTTP testing tool focused on speed and simplicity"
documentation = "https://github.com/hougesen/hitt#readme"
readme = "README.md"
homepage = "https://hitt.mhouge.dk"
repository = "https://github.com/hougesen/hitt"
license = "MIT"
keywords = ["cli", "http", "server-sent-events", "sse", "testing"]
categories = [
  "command-line-utilities",
  "development-tools",
  "web-programming",
  "web-programming::http-client",
]
exclude = ["examples", "www"]

[workspace.dependencies]
assert_cmd = "2.0.17"
clap = { version = "4.5.48", features = ["derive"] }
clap_complete = { version = "4.5.58" }
clap_complete_nushell = { version = "4.5.8" }
crossterm = { version = "0.29.0" }
eventsource-stream = { version = "0.2.3" }
futures = { version = "0.3.31" }
hitt-formatter = { path = "hitt-formatter", version = "0.0.21" }
hitt-parser = { path = "hitt-parser", version = "0.0.21" }
hitt-request = { path = "hitt-request", version = "0.0.21" }
hitt-sse = { path = "hitt-sse", version = "0.0.21" }
http = { version = "1.3.1" }
ignore = { version = "0.4.23" }
jsonformat = { version = "2.1.0" }
mime = { version = "0.3.17" }
predicates = "3.1.3"
reqwest = { version = "0.12.23", default-features = false, features = [
  "brotli",
  "charset",
  "cookies",
  "deflate",
  "gzip",
  "http2",
  "json",
  "macos-system-configuration",
  "rustls-tls",
  "zstd",
] }
reqwest-eventsource = { version = "0.6.0" }
tempfile = { version = "3.23.0" }
tokio = { version = "1.47.1", features = ["fs", "macros", "rt-multi-thread"] }

[profile.release]
lto = true
panic = "abort"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
