[package]
name = "hitt"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
categories.workspace = true
rust-version = "1.74"

[[bin]]
name = "hitt"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }
crossterm = { workspace = true }
futures = { workspace = true }
hitt-formatter = { workspace = true }
hitt-parser = { workspace = true }
hitt-request = { workspace = true }
hitt-sse = { workspace = true }
http = { workspace = true }
ignore = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
