[package]
name = "hitt"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
categories.workspace = true

[package.metadata.wix]
upgrade-guid = "C48B5625-D4B1-4010-AB90-5A691543995F"
path-guid = "54A271FF-AB52-41FB-A358-9BE9A8B44315"
license = false
eula = false

[[bin]]
name = "hitt"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }
clap_complete_nushell = { workspace = true }
crossterm = { workspace = true }
futures = { workspace = true }
hitt-formatter = { workspace = true }
hitt-parser = { workspace = true }
hitt-request = { workspace = true }
hitt-sse = { workspace = true }
http = { workspace = true }
ignore = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
