[package]
name = "hitt-formatter"
description = "Code formatter for the hitt http testing tool"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
homepage.workspace = true
readme = "README.md"
categories = ["parser-implementations"]
rust-version = "1.64"

[dependencies]
jsonformat = { workspace = true }
mime = { workspace = true }
