[package]
name = "hitt-formatter"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "Code formatter for the hitt http testing tool"
readme = "README.md"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = ["parser-implementations"]

[dependencies]
jsonformat = { workspace = true }
mime = { workspace = true }
