[package]
name = "hitt-parser"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "Parser for http files for the hitt http testing tool"
readme = "README.md"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = ["parser-implementations"]

[dependencies]
http = { workspace = true }
