[package]
name = "hitt-request"
description = "Request utility library for the hitt http testing tool"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
homepage.workspace = true
readme = "README.md"
categories = ["web-programming::http-client"]
rust-version = "1.70"

[dependencies]
hitt-parser = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
