[package]
name = "hitt-request"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "Request utility library for the hitt http testing tool"
readme = "README.md"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = ["web-programming::http-client"]

[dependencies]
hitt-parser = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
