[package]
name = "hitt-sse"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "SSE utility library for the hitt http testing tool"
documentation = { workspace = true }
readme = "README.md"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = ["web-programming"]

[dependencies]
eventsource-stream = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
reqwest-eventsource = { workspace = true }
tokio = { workspace = true }
